fix: fix candidate profile info behavior when the content overflows

--- a/src/components/UI/template/CandidateProfileTemplate/children/CandidateProfileTemplateProfile/CandidateProfileTemplateProfile.module.scss
+++ b/src/components/UI/template/CandidateProfileTemplate/children/CandidateProfileTemplateProfile/CandidateProfileTemplateProfile.module.scss
@@ -8,7 +8,7 @@
     @supports (max-height: 100dvh) {
       max-height: calc(100dvh - 52px - var(--nav-height, 0px));
     }
-    > footer {
+    > div {
       overflow-y: auto;
       scrollbar-color: #c2c8cf #00000026;
       &::-webkit-scrollbar {
